# your_morning_brief

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  M1.1_spec.md  M1.2_spec.md  M1.3_spec.md  M1.4_spec.md  M1.5_spec.md  M1.6_spec.md  M1.7_spec.md  M1.8_spec.md  MVP_imp_plan.md  Makefile  README.md  docker-compose.dev.yml  environment.yml  your_morning_brief_PRD.md
.claude/agents/: security-auditor.md
.cursor/rules/: backend-standards.mdc  commits-ci.mdc  dependency-management.md  formatting-indentation.mdc  frontend-standards.mdc  general.md  milestone-management.md  project-structure.mdc  python-env.mdc  security-standards.mdc  security.md  type-checking.md
.github/workflows/: ci.yml  claude-code-review.yml  claude-review.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  test.db
backend/alembic/: env.py
backend/alembic/versions/: fbd6ee77ab23_initial_schema_with_users_topics_.py
backend/app/: main.py
backend/app/api/: health.py
backend/app/core/: config.py  logging.py
backend/app/data/: sources.seed.json
backend/app/db/: base.py  dependencies.py  session.py
backend/app/ingestion/: __init__.py  feed_client.py  ingest_one.py  mapper.py  seeder.py
backend/app/middleware/: error_handler.py
backend/app/models/: __init__.py  article.py  article_summary.py  delivery.py  feedback.py  source.py  topic.py  user.py
backend/app/processing/: __init__.py  content_hash.py  encoding.py  normalization.py
backend/tests/: conftest.py  test_config.py  test_database.py  test_deduplication.py  test_encoding.py  test_error_handler.py  test_health.py  test_ingestion_integration.py  test_ingestion_security.py  test_ingestion_unit.py  test_logging.py  test_normalization.py
backend/tests/fixtures/: sources.test.json
backend/tests/fixtures/feeds/: near_duplicate_samples.xml  sample_feed.xml
backend/tests/fixtures/feeds/encoding_samples/: iso8859_sample.xml  utf8_sample.xml  windows1252_sample.xml
backend/tests/fixtures/malicious_feeds/: xss_feed.xml
frontend/: Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/tests/: smoke.test.ts
scripts/: check_dependency_sync.py
