[project]
name = "your-morning-brief-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.114.2",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "httpx==0.27.2",
  "sqlalchemy==2.0.31",
  "psycopg2-binary==2.9.9",
  "alembic==1.13.2",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "ruff==0.6.8",
  "black==24.8.0",
  "mypy==1.11.2",
  # httpx is required for TestClient but not in main deps
  # since it's only used for testing
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "W", "SIM", "C90"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
